# snowfl

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/snowfl/: __init__.py  main.py  snowfl.py
src/snowfl/lib/: __init__.py  errors.py  get_api_key.py
tests/: test_get_api_key.py  test_snowfl.py
