[metadata]
name = snowfl
version = 0.1.0
description = A Python package that allows users to search for content on Snowfl, apply sorting, and filter NSFW content, returning results as an array of objects with relevant information.
author = chocotonic
author_email =
license = MIT

[options]
packages = find:
install_requires =
certifi==2023.11.17
charset-normalizer==3.0.0
idna==3.6
requests==2.27.0
urllib3==2.1.0

[options.packages.find]
where = .
